# scSELpy

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  Tutorial.ipynb  pyproject.toml  refresh.sh  update_version_clean_nb.py
docs/: Generate_params.py  Makefile  Prepare_tutorial.py  requirements.txt
docs/Mock/: Mock.ipynb  Tutorial.ipynb
docs/Notebooks_used_for_publication/: GSM6346300.ipynb  subset.ipynb
docs/source/: Mock.md  Tutorial.md  Usage.md  conf.py  index.md  installation.md  loggin.md  plotting.md  tools.md  tree.md
docs/source/generated_markdown/: Parameters.md
scselpy/: __init__.py  __main__.py  call_main.py  config.py  version.py
scselpy/AnndataTestObj/: _CreateAnndataObj.py  __init__.py
scselpy/Rename_annotation/: _GenerateDict.py  _RenameAnno.py  __init__.py
scselpy/plotting/: __init__.py  _scselpy.py
scselpy/tests/: REMAP_val.txt  REMAP_val2.txt  REMAP_val3.txt  scselpy_tests.py  utils.py
scselpy/tools/: __init__.py  _calculate_stats.py
